{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 112,
  "lineage": "9386500c-de4b-52a4-75f1-04741ed06d2d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "virtega-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:network-acl/acl-027c0d72aea7593ef",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 443
              }
            ],
            "id": "acl-027c0d72aea7593ef",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "183875153028",
            "subnet_ids": [],
            "tags": {
              "Name": "Virtega-NACl-default"
            },
            "vpc_id": "vpc-0a11c0d0e54ef3c86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Virtega-master",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:183875153028:instance/i-0477b728c5cb41d53",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0477b728c5cb41d53",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "virtega-keyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0812e21784a843059",
            "private_dns": "ip-172-32-1-199.ec2.internal",
            "private_ip": "172.32.1.199",
            "public_dns": "ec2-54-198-226-48.compute-1.amazonaws.com",
            "public_ip": "54.198.226.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d4117418318189ae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0edc06b4ce3d4a9a1",
            "tags": {
              "Environment": "default",
              "Name": "Virtega-master-default",
              "Terraform": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "Virtega-master-default"
            },
            "vpc_security_group_ids": [
              "sg-0c182a1194cda8851"
            ]
          },
          "dependencies": [
            "module.virtega_sg.aws_security_group.this",
            "module.virtega_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.Virtega-slave",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:183875153028:instance/i-037fda16b1b164c88",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037fda16b1b164c88",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "virtega-keyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d27d0d4c4315248e",
            "private_dns": "ip-172-32-1-109.ec2.internal",
            "private_ip": "172.32.1.109",
            "public_dns": "ec2-54-91-161-129.compute-1.amazonaws.com",
            "public_ip": "54.91.161.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c8d3e4552d9913db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0edc06b4ce3d4a9a1",
            "tags": {
              "Environment": "default",
              "Name": "Virtega-slave-default",
              "Terraform": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "Virtega-slave-default"
            },
            "vpc_security_group_ids": [
              "sg-0c182a1194cda8851"
            ]
          },
          "dependencies": [
            "module.virtega_sg.aws_security_group.this",
            "module.virtega_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.virtega_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:security-group/sg-0c182a1194cda8851",
            "description": "Security group for  Ec2 instance",
            "egress": [],
            "id": "sg-0c182a1194cda8851",
            "ingress": [],
            "name": "virtega-sg-default-20210113135100859400000001",
            "name_prefix": "virtega-sg-default-",
            "owner_id": "183875153028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "virtega-sg-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a11c0d0e54ef3c86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.virtega_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-2434095050",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c182a1194cda8851",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.virtega_sg.aws_security_group.this",
            "module.virtega_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.virtega_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "tcp for ec2 ",
            "from_port": 22,
            "id": "sgrule-4280289472",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c182a1194cda8851",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.virtega_sg.aws_security_group.this",
            "module.virtega_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0833b02cd23bbd0ee",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-201-87-176.compute-1.amazonaws.com",
            "public_ip": "34.201.87.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "default",
              "Management": "Terraform",
              "Name": "NatEIP-default",
              "Owner": "DevOps"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:internet-gateway/igw-0b87c01ffd9ac50fa",
            "id": "igw-0b87c01ffd9ac50fa",
            "owner_id": "183875153028",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "default",
              "Management": "Terraform",
              "Name": "IGW-default",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0a11c0d0e54ef3c86"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0833b02cd23bbd0ee",
            "id": "nat-0f9c75bb681cefb93",
            "network_interface_id": "eni-0dcb0ed98c9945082",
            "private_ip": "172.32.1.80",
            "public_ip": "34.201.87.176",
            "subnet_id": "subnet-0edc06b4ce3d4a9a1",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "default",
              "Management": "Terraform",
              "Name": "NGW-default",
              "Owner": "DevOps"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0155fe29069c75ee11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f9c75bb681cefb93",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0155fe29069c75ee1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b87c01ffd9ac50fa",
            "id": "r-rtb-0397659ce5840437d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0397659ce5840437d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0155fe29069c75ee1",
            "owner_id": "183875153028",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "default",
              "Management": "Terraform",
              "Name": "RouteTablePrivate-default",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0a11c0d0e54ef3c86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0397659ce5840437d",
            "owner_id": "183875153028",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "default",
              "Management": "Terraform",
              "Name": "RouteTablePublic-default",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0a11c0d0e54ef3c86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd5e30b1c92514a5",
            "route_table_id": "rtb-0155fe29069c75ee1",
            "subnet_id": "subnet-0e1d53cdaa4bd0a1f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09549821766c0ba4a",
            "route_table_id": "rtb-0155fe29069c75ee1",
            "subnet_id": "subnet-016013103c7b81d14"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0402f549bce18e498",
            "route_table_id": "rtb-0155fe29069c75ee1",
            "subnet_id": "subnet-01ad7cd9790307396"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e612a5e880716ae3",
            "route_table_id": "rtb-0155fe29069c75ee1",
            "subnet_id": "subnet-000656b06b42b4952"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cce2909e111519eb",
            "route_table_id": "rtb-0397659ce5840437d",
            "subnet_id": "subnet-0edc06b4ce3d4a9a1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c790c36394e121e",
            "route_table_id": "rtb-0397659ce5840437d",
            "subnet_id": "subnet-02ef35fce28acb085"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:subnet/subnet-0e1d53cdaa4bd0a1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.32.5.0/24",
            "id": "subnet-0e1d53cdaa4bd0a1f",
            "map_public_ip_on_launch": false,
            "owner_id": "183875153028",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "default",
              "Management": "Terraform",
              "Name": "vpc-Virtega-default-db-us-east-1a",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0a11c0d0e54ef3c86"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:subnet/subnet-016013103c7b81d14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.32.6.0/24",
            "id": "subnet-016013103c7b81d14",
            "map_public_ip_on_launch": false,
            "owner_id": "183875153028",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "default",
              "Management": "Terraform",
              "Name": "vpc-Virtega-default-db-us-east-1b",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0a11c0d0e54ef3c86"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:subnet/subnet-01ad7cd9790307396",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.32.3.0/24",
            "id": "subnet-01ad7cd9790307396",
            "map_public_ip_on_launch": false,
            "owner_id": "183875153028",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "default",
              "Management": "Terraform",
              "Name": "vpc-Virtega-default-private-us-east-1a",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0a11c0d0e54ef3c86"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:subnet/subnet-000656b06b42b4952",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.32.4.0/24",
            "id": "subnet-000656b06b42b4952",
            "map_public_ip_on_launch": false,
            "owner_id": "183875153028",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "default",
              "Management": "Terraform",
              "Name": "vpc-Virtega-default-private-us-east-1b",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0a11c0d0e54ef3c86"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:subnet/subnet-0edc06b4ce3d4a9a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.32.1.0/24",
            "id": "subnet-0edc06b4ce3d4a9a1",
            "map_public_ip_on_launch": true,
            "owner_id": "183875153028",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "default",
              "Management": "Terraform",
              "Name": "vpc-Virtega-default-public-us-east-1a",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0a11c0d0e54ef3c86"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:subnet/subnet-02ef35fce28acb085",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.32.2.0/24",
            "id": "subnet-02ef35fce28acb085",
            "map_public_ip_on_launch": true,
            "owner_id": "183875153028",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "default",
              "Management": "Terraform",
              "Name": "vpc-Virtega-default-public-us-east-1b",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0a11c0d0e54ef3c86"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:vpc/vpc-0a11c0d0e54ef3c86",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.32.0.0/16",
            "default_network_acl_id": "acl-02cd3118734c2dc6d",
            "default_route_table_id": "rtb-0256f7059e55cce8d",
            "default_security_group_id": "sg-01f77e1c884ad6484",
            "dhcp_options_id": "dopt-1d397f67",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a11c0d0e54ef3c86",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0256f7059e55cce8d",
            "owner_id": "183875153028",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "default",
              "Management": "Terraform",
              "Name": "vpc-Virtega-default",
              "Owner": "DevOps"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}